tests/pass/test_sema_strict_ok.tk
import std/memory::assert

fn main() -> i32 {
    // 1. Valid Arithmetic
    auto i = 1 + 2
    // auto f = 1.0 + 2.0

    // 2. Valid Comparison
    auto b = 1 == 2
    auto b2 = 1 < 2

    // 3. Valid If Condition
    if true {}
    
    assert(i == 3, "i mismatch")
    assert(b == false, "b logic mismatch (1==2)")
    assert(b2 == true, "b2 logic mismatch (1<2)")
    return 0
}
